# tatta-steel-r2

./: .env.example  .gitignore  INSTRUCTIONS_TO_RUN.md  Makefile  README.md  docker-compose.yml  local.db  paths.py  pyproject.toml  render.yaml  requirements-pro.txt  requirements.txt  simulator.py
.github/workflows/: backend-ci.yml  deployment.yml  frontend-ci.yml  model-training.yml
backend/: Dockerfile  main.py
backend/api/: config.py  data_store.py  dependencies.py  main.py  schemas.py
backend/artifacts/: autoencoder.joblib  catboost_risk.joblib  evaluation_metrics.json  isolation_forest.joblib  lstm_autoencoder.joblib  lstm_rul.joblib  maintenance_rl.joblib  prophet_forecast.joblib  tft_rul.joblib  xgboost_failure.joblib
backend/config/: constants.py  logging_config.py  settings.py
backend/schemas/: __init__.py  chat.py
backend/services/: db_data.py  db_repository.py  equipment_context.py  export_utils.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
database/: __init__.py  models.py  neo4j.py  postgres.py  qdrant.py  redis.py  timescaledb.py
database/database/: __init__.py  models.py  postgres.py
database/migrations/: 001_init.sql  002_extended_schema.sql
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
models/: base.py  registry.py
scripts/: __init__.py  evaluation.py  generate_synthetic_data.py  industrial_dataset.py  run_migrations.py  seed_database.py  seed_industrial_data.py  synthetic_data.py
(+147 files in other folders)
