[project]
name = "industrial-agentic-maintenance-ai"
version = "1.0.0"
description = "Enterprise Agentic AI platform for predictive industrial maintenance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "backend"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
